# autosolve-client-cpp

./: CMakeLists.txt  Doxyfile  README.md
cmake/: windeployqt.cmake
include/autosolve/: AutoSolve.h  AutoSolveConnectResultType.h  AutoSolveConstants.h  AutoSolveGlobal.h
include/autosolve/exceptions/: AutoSolveExceptions.h
include/autosolve/messaging/: AutoSolveBacklogMessage.h  AutoSolveCancelMessage.h  AutoSolveCancelResponse.h  AutoSolveCancelResponseArray.h  AutoSolveConnectionEvent.h  AutoSolveMessage.h  AutoSolveResponse.h  IAutoSolveMessage.h
test/: CMakeLists.txt
test/source/: autosolve.cpp
